<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15"
    android:padding="10dp"
    android:background="@drawable/view_background"
    tools:context=".CountryDetailsActivity">

    <TextView
        android:id="@+id/tvCommonName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        tools:text="Common name" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        tools:text="Full name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivFlag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/ivCoatOfArms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.8"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantCapital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/capital" />

        <TextView
            android:id="@+id/tvCapital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="Budapest"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.8"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantPopulation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/population" />

        <TextView
            android:id="@+id/tvPopulation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            tools:text="9749763"/>

        <TextView
            android:id="@+id/tvConstantTld"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tld" />

        <TextView
            android:id="@+id/tvTld"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            tools:text=".hu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.8"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area" />

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            tools:text="93028 km²"/>

        <TextView
            android:id="@+id/tvConstantLandlocked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/landlocked" />

        <TextView
            android:id="@+id/tvLandlocked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            tools:text="yes"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.8"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantRegion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/region" />

        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            tools:text="Europe"/>

        <TextView
            android:id="@+id/tvConstantStartOfWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_of_week" />

        <TextView
            android:id="@+id/tvStartOfWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            tools:text="monday"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.8"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantSubregion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subregion" />

        <TextView
            android:id="@+id/tvSubregion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            tools:text="Central Europe"/>

        <TextView
            android:id="@+id/tvConstantCarSigns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car_signs" />

        <TextView
            android:id="@+id/tvCarSigns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            tools:text="H"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1.6"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.2"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="2.2">

                <TextView
                    android:id="@+id/tvConstantIndependent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/independent" />

                <TextView
                    android:id="@+id/tvIndependent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    tools:text="yes"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="2.2">

                <TextView
                    android:id="@+id/tvConstantUnMember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/un_member" />

                <TextView
                    android:id="@+id/tvUnMember"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    tools:text="yes"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvConstantCarSide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/car_side" />

        <TextView
            android:id="@+id/tvCarSide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            tools:text="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1.4"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantContinents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continents" />

        <TextView
            android:id="@+id/tvContinents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="Europe"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvConstantTimezones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timezones" />

        <TextView
            android:id="@+id/tvTimezones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="UTC+01:00"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnGoogleMaps"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/open_google_maps" />

    <Button
        android:id="@+id/btnOpenStreetMap"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/open_openstreetmap" />
</LinearLayout>